# not_yet_decided

./: .gitignore  .mcp.json  CLAUDE.md  README.md  package-lock.json  pyproject.toml  skills-install.sh
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-25T23-11-39-390Z.yml  page-2026-04-25T23-13-43-432Z.yml  page-2026-04-25T23-13-48-895Z.yml  page-2026-04-25T23-14-34-115Z.yml  page-2026-04-25T23-15-30-957Z.yml  page-2026-04-25T23-15-40-627Z.yml  page-2026-04-25T23-16-07-995Z.yml  page-2026-04-25T23-21-57-095Z.yml  page-2026-04-26T00-03-56-407Z.yml
backend/: config.py  conflict.py  test_conflict.py  test_conflict_integration.py  test_graph_query_edit.py  test_ingest_agnostic.py  test_ingest_apply_record.py  test_source_update_api.py
backend/api/: app.py  models.py
backend/eval/: __init__.py  golden.py  harness.py
backend/graph/: schema.sql  store.py
backend/ingest/: __init__.py  __main__.py  canonical.yaml  identity.py  ingestor.py  llm.py  onboard.py  runtime.py  spec.py  store.py
backend/models/: __init__.py  graph.py  responses.py
backend/retrieval/: __init__.py  _util.py  agentic.py  embed.py  embedder.py  engine.py  exact.py  hybrid.py  (+6 more)
docs/: ARCHITECTURE.md  DATASET.md  Qontext.docx  ddd-glossary.md  failure-modes.md
frontend/: package-lock.json  package.json  tailwind.config.ts
harness/: PRINCIPLES.md  failure-modes.md  skills-install.sh  skills-lock.json
pioneer/: MODELS.md  PIONEER_CHAT.md  README.md
ralph/: .env.example  PROMPT.md  prd.sample.json
scripts/: bootstrap_subgraph_nodes.py  gen_router_seed.py  ingest_all.sh
(+108 files in other folders)
