[project]
name = "better-context"
version = "0.1.0"
description = "Enterprise knowledge graph with fact-level provenance"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0",
    "pydantic>=2",
    "pyyaml>=6",
    "jsonpath-ng>=1.6",
    "python-dotenv>=1",
    "google-genai>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1",
    "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
include = ["backend"]
exclude = ["**/__pycache__", "**/.venv"]

[tool.pytest.ini_options]
testpaths = ["backend"]
python_files = ["test_*.py", "*_test.py"]
